# chordvery

./: Cargo.toml  README.md  SPEC.md
src/: lib.rs  main.rs
src/midi/: input.rs  mod.rs
src/theory/: chord.rs  mod.rs  note.rs  progression.rs  quality.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/components/: history.rs  mod.rs  piano.rs  tree.rs
